Collapse multiple build-aux and m4 directories into one copy of each.

--- a/extension/ChangeLog
+++ b/extension/ChangeLog
@@ -1,3 +1,10 @@
+2020-07-22         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* configure.ac: Use parent directory's m4 and build-aux.
+	* Makefile.am (ACLOCAL_AMFLAGS): Updated.
+	* m4, build-aux: Subdirectories removed.
+	* Makefile.in: Regenerated.
+
 2020-07-21         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Update to 1.16.
