--- a/m4/ChangeLog
+++ b/m4/ChangeLog
@@ -1,3 +1,13 @@
+2020-07-22         Arnold D. Robbins     <arnold@skeeve.com>
+	
+	* fcntl-o.m4, glibc2.m4, glibc21.m4, intdiv0.m4, intldir.m4,
+	intmax.m4, inttypes-pri.m4, inttypes_h.m4, lcmessage.m4, lock.m4,
+	longlong.m4, printf-posix.m4, size_max.m4, stdint_h.m4, threadlib.m4,
+	uintmax_t.m4, visibility.m4, wchar_t.m4, wint_t.m4,
+	xsize.m4: Copyright updated.
+	* dirfd.m4, libtool.m4, ltoptions.m4, ltsugar.m4, ltversion.m4,
+	lt~obsolete.m4: New files, from extension/m4.
+
 2020-07-20  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* gettext.m4: Upgrade to gettext-0.20.2.
