--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-22         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.in: Regenerated.
+
 2020-07-21         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Update to 1.16.
