--- a/helpers/ChangeLog
+++ b/helpers/ChangeLog
@@ -1,3 +1,8 @@
+2020-07-22         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* update-aux.sh: Adjust for removal of build-aux from extension
+	directory.
+
 2020-07-21         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* update-aux.sh: Adjust for presence of build-aux in main
