Update to Bison 3.7.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-07-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.c, command.c: Regenerated with Bison 3.7.
+	* NEWS: Updated.
+
 2020-07-22         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.in: Regenerated.
