Doc that API get_mpfr and get_mpz are obsolete.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,9 @@
+2020-07-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Document that get_mpfr and get_mpz are obsolete
+	and revise doc on handling MPFR and GMP values from an
+	extension function.
+
 2020-07-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Document how to handle MPFR and GMP values
