--- a/extension/ChangeLog
+++ b/extension/ChangeLog
@@ -1,3 +1,8 @@
+2020-07-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* intdiv.c (do_intdiv): Change quotient and remainder to
+	local variables. No need to allocate/free them via the API.
+
 2020-07-22         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* configure.ac: Use parent directory's m4 and build-aux.
