--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
 	* awkgram.c, command.c: Regenerated with Bison 3.7.
 	* NEWS: Updated.
 
+	Unrelated:
+
+	* gawkapi.h (api_get_mpfr, api_get_mpz): Mark as obsolete.
+
 2020-07-22         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.in: Regenerated.
