Change FIXME in the manual into a real cross reference.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-07-28         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Change a FIXME into a real cross reference. Thanks
+	to Antonio Columbo for the report.
+
 2020-07-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Document that get_mpfr and get_mpz are obsolete
