--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Mon Jun 29 11:16:12 IDT 2020
+Tue Jul 28 20:45:09 IDT 2020
 ============================
 
 There were too many files tracking different thoughts and ideas for
@@ -32,6 +32,8 @@ Minor Cleanups and Code Improvements
 
 	Message cleanup:
 	* Messages are inconsistent about final punctuation (periods etc.)
+
+	Go through the FIXMEs in the manual and fix as many as possible.
 
 Minor New Features
 ------------------
