--- a/build-aux/ChangeLog
+++ b/build-aux/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-28         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* install-sh: Updated from GNULIB.
+
 2020-07-22         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* ltmain.sh: New file, from extension/build-aux.
