--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* custom.h (FLEXIBLE_ARRAY_MEMBER): Define to 1 for dfa.h.
+
 2020-07-28         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Eliminate 'iszero: redefined' warning from tcc.
