--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.h: Synced from GNULIB.
+
 2020-07-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* cdefs.h, dfa.c, libc-config.h, localeinfo.c, localeinfo.h,
