--- a/doc/it/ChangeLog
+++ b/doc/it/ChangeLog
@@ -1,3 +1,9 @@
+2020-07-29         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawk.1: Updated.
+	* gawktexi.in: Updated.
+	* texinfo.tex: Updated.
+
 2020-06-28         Antonio Giovanni Colombo   <azc100@gmail.com>
                    Marco Curreli              <marcocurreli@tiscali.it>
 
