modified permissions to 644

--- a/doc/it/ChangeLog
+++ b/doc/it/ChangeLog
@@ -1,5 +1,13 @@
 2020-07-29         Antonio Giovanni Colombo   <azc100@gmail.com>
 
+	* compila_originale.sh: fixed permission.
+	* compila_smallprint.sh: fixed permission.
+	* gawk.1: fixed permission.
+	* gawktexi.in: fixed permission.
+	* texinfo.tex: fixed permission.
+
+2020-07-29         Antonio Giovanni Colombo   <azc100@gmail.com>
+
 	* gawk.1: Updated.
 	* gawktexi.in: Updated.
 	* texinfo.tex: Updated.
