--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,10 @@ Changes from 5.1.0 to 5.1.1
 7. The test suite has been improved, making it easier to run the entire
    suite with -M. Use `GAWK_TEST_ARGS=-M make check' to do so.
 
+8. Profiling and pretty-printing output has been modified slightly so
+   that functions are presented in a reasonable order with respect
+   to the namespaces that contain them.
+
 Changes from 5.0.1 to 5.1.0
 ---------------------------
 
