--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2020-08-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (Profiling): Add explanation of function order.
+
 2020-07-28         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Change a FIXME into a real cross reference. Thanks
