--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,7 @@
+2020-08-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* nsprof1.ok, nsprof2.ok: Updated after code changes.
+
 2020-08-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Simplify handling of tests that have an -mpfr.ok file.
