--- a/helpers/ChangeLog
+++ b/helpers/ChangeLog
@@ -1,3 +1,7 @@
+2020-08-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* update-support.sh: New file.
+
 2020-07-22         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* update-aux.sh: Adjust for removal of build-aux from extension
