Spell ROUNDMODE correctly in prints.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@
 	* symbol.c (make_symbol): Set valref to 1. Allows the
 	release_all_vars function to work.
 
+	Unrelated:
+
+	* array.c (value_info): Spell ROUNDMODE correctly in output.
+	* mpfr.c (set_ROUNDMODE): Ditto.
+
 2020-08-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.c, command.c: Regenerated with Bison 3.7.1.
