--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-08-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (String Functions): Fix a typo in the description
+	of patsplit. Thanks to Nelson H.F. Beebe for the report.
+
 2020-08-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (Profiling): Add explanation of function order.
