--- a/doc/gawk.texi
+++ b/doc/gawk.texi
@@ -18762,7 +18762,7 @@ the possibly null separator string
 after @code{@var{array}[@var{i}]}.
 The possibly null leading separator will be in @code{@var{seps}[0]}.
 So a non-null @var{string} with @var{n} fields will have @var{n+1} separators.
-A null @var{string} will not have neither fields nor separators.
+A null @var{string} has no fields or separators.
 
 The @code{patsplit()} function splits strings into pieces in a
 manner similar to the way input lines are split into fields using @code{FPAT}
