--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,8 @@
+2020-08-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* profile14.ok: Updated. Somehow it was not done right to
+	start.
+
 2020-08-17         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New tests, profile14 and profile15.
