Fix CentOS 7 core dumps.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-08-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awk.h (NODE): Move valref completely out of the union. Fixes
+	core dumps on old GCC on CentOS 7.
+
 2020-08-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Fix TIDYMEM / use of mtrace.
