--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-08-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (Arithmetic Ops): Update text to fix a FIXME. Document
+	that modulus is POSIX compliant.
+
 2020-08-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (String Functions): Fix a typo in the description
