Make all messages consistent: no final periods.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2020-08-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y, builtin.c, command.y, debug.c, gawkapi.c,
+	io.c, node.c: Make all messages consistent: Remove final periods
+	from messages that had them.
+	* TODO: Updated.
+
 2020-08-20         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awk.h (NODE): Move valref completely out of the union. Fixes
