--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,7 @@
+2020-08-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* mbstr1.ok, mbstr2.ok: Updated after code changes.
+
 2020-08-20         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* profile14.ok: Updated. Somehow it was not done right to
