Clear out the record and fields at start of BEGINFILE rule.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-08-25         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* interpret.h (r_interpret): At Op_rule, check if in BEGINFILE. If so,
+	clear the record.  Fixes an issue reported by Pat Rankin in May, 2011.
+
 2020-08-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y, builtin.c, command.y, debug.c, gawkapi.c,
