--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,9 +1,14 @@
+2020-08-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Fix some small mistakes / typos.
+
 2020-08-25         Arnold D. Robbins     <arnold@skeeve.com>
 
-	* gawktexi.in (BEGINFILE/ENDFILE): Document that as of 5.1.1, in a BEGINFILE,
-	the record and fields are cleared.  Fixes an issue reported by Pat Rankin
-	in May, 2011.  Remove the related FIXME, as well as a FIXME later on that
-	is no longer relevant. Clarify the prose in the whole section.
+	* gawktexi.in (BEGINFILE/ENDFILE): Document that as of 5.1.1, in
+	a BEGINFILE, the record and fields are cleared.  Fixes an issue
+	reported by Pat Rankin in May, 2011.  Remove the related FIXME,
+	as well as a FIXME later on that is no longer relevant. Clarify
+	the prose in the whole section.
 
 2020-08-24         Arnold D. Robbins     <arnold@skeeve.com>
 
