--- a/doc/it/ChangeLog
+++ b/doc/it/ChangeLog
@@ -1,3 +1,7 @@
+2020-08-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Updated.
+
 2020-08-25         Antonio Giovanni Colombo   <azc100@gmail.com>
 
 	* gawktexi.in: Updated.
