--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,6 +1,7 @@
 2020-08-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Fix some small mistakes / typos.
+	Adjust the prose some as well.
 
 2020-08-25         Arnold D. Robbins     <arnold@skeeve.com>
 
