Update uniq.awk to current POSIX.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2020-08-31         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (Uniq Program): Updated uniq.awk to follow 2020 POSIX.
+
 2020-08-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Fix some small mistakes / typos.
