use/check for GetSystemTime() instead of GetSystemTimeAsFileTime()

--- a/doc/gawk.texi
+++ b/doc/gawk.texi
@@ -38415,7 +38415,7 @@ floating-point value.  If the time is unavailable on this platform, return
 precision, but the actual precision may vary based on the platform.
 If the standard C @code{gettimeofday()} system call is available on this
 platform, then it simply returns the value.  Otherwise, if on MS-Windows,
-it tries to use @code{GetSystemTimeAsFileTime()}.
+it tries to use @code{GetSystemTime()}.
 
 @cindex @code{sleep()} extension function
 @item result = sleep(@var{seconds})
