--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,9 @@
+2020-09-04         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Index BWK quotes separately. Finish using "BWK awk"
+	everywhere. Fix up text with exercise for uniq.awk in both
+	places.
+
 2020-09-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawk.1: Minor edits.
