Make PROCINFO["identifiers"] smarter about arrays.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-09-04         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y [GRAMMAR]: Install arrays as Node_var_array. Improves
+	PROCINFO["identifiers"]. Thanks to anoncoward@nym.hush.com
+	for the report.
+
 2020-08-25         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* interpret.h (r_interpret): At Op_rule, check if in BEGINFILE. If so,
