--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,7 @@
+2020-09-04         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* id.ok: Updated after code changes.
+
 2020-08-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* mbstr1.ok, mbstr2.ok: Updated after code changes.
