--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-09-11         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (Id Program): Rewrite to be POSIX compliant.
+	Update explanatory text as well.
+
 2020-09-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Index BWK quotes separately. Finish using "BWK awk"
