--- a/build-aux/ChangeLog
+++ b/build-aux/ChangeLog
@@ -1,3 +1,7 @@
+2020-09-11         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* config.sub: Updated from GNULIB.
+
 2020-08-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* config.guess, config.sub: Updated from GNULIB.
